--- a/css/home.css
+++ b/css/home.css
@@ -34,21 +34,18 @@ body {
     user-select: none;
 }
 #hero{
-	height: 560px;
+	height: 100%;
 }
 #content {
 	margin: 0 auto;
-	width: 100%;
-	height: 100%;
 	max-width: 1280px;
-	min-width: 360px;
 	background: #F2F4F6;
 	border-radius: 24px;
 	display: flex;
 }
 #content-inside {
 	margin: auto;
-	padding: 24px;
+	padding: 72px 24px;
 }
 #logo {
 	padding: 0 48px;
@@ -120,10 +117,9 @@ body {
 	width: 100%;
 }
 .section {
-	height: auto;
 	width: 100%;
 	display: flex;
-	height: 480px;
+	aspect-ratio:1/1;
 	border-radius: 24px;
 	border: 2px solid #F2F4F6;
 	cursor: pointer;
